<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.franz.wordreminder.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/activity_main_store_button"
        android:text="@string/layout_main_button_add_word"
        android:onClick="onAdd"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/activity_main_delete_button"
        android:text="@string/layout_main_button_delete_word"
        android:onClick="onDelete"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/layout_main_last_words"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <!-- text is fixed, it will not change during the lifecycle -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.franz.doublesearch.MainActivity">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:context="com.example.franz.doublesearch.MainActivity">

            <TextView
                android:id="@+id/text_view_lang_native_first"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="onFirstView"
                android:text="@string/layout_main_default_native"
                android:gravity="center"/>

            <TextView
                android:id="@+id/text_view_lang_foreign_first"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="onFirstView"
                android:text="@string/layout_main_default_foreign"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:context="com.example.franz.doublesearch.MainActivity">

            <TextView
                android:id="@+id/text_view_lang_native_second"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="onSecondView"
                android:text="@string/layout_main_default_native"
                android:gravity="center"/>

            <TextView
                android:id="@+id/text_view_lang_foreign_second"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="onSecondView"
                android:text="@string/layout_main_default_foreign"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:context="com.example.franz.doublesearch.MainActivity">

            <TextView
                android:id="@+id/text_view_lang_native_third"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="onThirdView"
                android:text="@string/layout_main_default_native"
                android:gravity="center"/>

            <TextView
                android:id="@+id/text_view_lang_foreign_third"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="onThirdView"
                android:text="@string/layout_main_default_foreign"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
